[tool.poetry]
name = "moody-backend"
version = "0.1.0"
description = ""
authors = ["SkazuHD <voda0110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
transformers = "^4.51.3"
uvicorn = {extras = ["standard"], version = "^0.34.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
