[tool.poetry]
name = "vibeify-backend"
version = "0.1.0"
description = ""
authors = ["SkazuHD <voda0110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.13"}
uvicorn = "^0.34.3"
firebase-admin = "^6.9.0"
mutagen = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
